feat: Implement local PDF extraction and remove Gemini dependency
Replaces the cloud-based Gemini API with a local PDF parsing solution using `pdfjs-dist`. This change enhances privacy and eliminates the need for API keys, making the application fully client-side.

Key changes include:
- Introducing `pdfjs-dist` for PDF text extraction.
- Removing the `@google/genai` dependency and related logic.
- Updating `package.json` to reflect the new dependencies and rename the package.
- Adjusting `vite.config.ts` and `vite-env.d.ts` to remove API key configuration.
- Modifying `README.md` to highlight local functionality and deployment simplicity.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pdf-compiler-ai",
+  "name": "pdf-compiler-local",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "latest",
+    "pdfjs-dist": "^3.11.174",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.344.0",
